--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 image = "^1.5.33"
 argparse = "^1.4.0"
 Flask = "^2.1.2"
+Bootstrap-Flask = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 
